--- a/manifests/rhoai/onprem/params.env
+++ b/manifests/rhoai/onprem/params.env
@@ -1,4 +1,4 @@
 # Injected variables from the Operator
-odh-dashboard-image=quay.io/opendatahub/odh-dashboard:pr-4692
+odh-dashboard-image=quay.io/ksuta/odh-dashboard:local1
 dashboard-url=https://www.redhat.com
 section-title=OpenShift AI
